# quick-cliques-py

./: .gitignore  CMakeLists.txt  README.md  makefile  setup.py
examples/: example.py
quick_cliques/: __init__.py  quick_cliques.py
src/: AdjacencyListAlgorithm.cpp  DegeneracyAlgorithm.cpp  HybridAlgorithm.cpp  TomitaAlgorithm.cpp  python_bindings.cpp
